--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://example.com/iframe-url"],
       "js": ["content.js"]
     }
   ]
